@@ -172,6 +172,12 @@
 		background-color: #ddd;
 	}
 
+	/* emoticons
+	 *
+	 ************************************************************/
+	#guestbook .emoticon {}
+	
+	
 	/* admin tools - sprite-based
 	 *
 	 ************************************************************/
@@ -187,17 +193,17 @@
 
 	#guestbook .delete
 	{
-		background: transparent url( ../img.._sprite.png ) no-repeat 0 -80px;
+		background: transparent url( ../img/guestbook_sprite ) no-repeat 0 -80px;
 	}
 
 	#guestbook .comment
 	{
-		background: transparent url( ../img.._sprite.png ) no-repeat 0 -96px;
+		background: transparent url( ../img/guestbook_sprite ) no-repeat 0 -96px;
 	}
 
 	#guestbook .spam
 	{
-		background: transparent url( ../img.._sprite.png ) no-repeat 0 -64px;
+		background: transparent url( ../img/guestbook_sprite ) no-repeat 0 -64px;
 	}
 
 	#guestbook .entryTools
