@@ -45,4 +45,5 @@ maintenance release
 maintenance release
 - added PHPCaptcha
 - added URL fixes
+- added configurable smilies
 Thanks to s!m for the improvements
